--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>Pranesh S</h1>
-            <p>Am Mechanical Engineer</p>
+            <img src="images.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1>Rathina D</h1>
+            <p>BCA</p>
         </div>
     </header>
 
@@ -115,12 +115,9 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm a <b>web development</b> expert who is passionate about creating dynamic and user-friendly websites. 
+            <p>I'm a <b>Student</b> expert who is passionate about creating dynamic and user-friendly websites. 
                 I'm driven by the desire to craft high-performance web applications that enhance user experience and provide
-                 seamless digital solutions. With over 7 years of experience in the field, I'm dedicated to staying up to date 
-                 with the latest trends and innovations in the 
-                 web development landscape. I'm also committed to helping others learn more about web technologies, 
-                 best practices, and how to build secure and scalable websites.</p>
+                 seamless digital solutions. </p>
 
         </div>
     </section>
@@ -128,7 +125,7 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>Deemed University  - Mech</p>
+            <p>Madras univercity-BCA</p>
             
             
         </div>
@@ -176,7 +173,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Pranesh S</p>
+        <p>&copy; 2025 Rathina D</p>
     </footer>
 
     <script>
